# sigma7sphere

./: .gitmodules  CMakeLists.txt
include/: CMatrixGL.h  FontGL.h  FontHelvetica12.h  dhdc.h  drdc.h
lib/: dhd64.lib  drd64.lib
src/: sphere.cpp
